fix bugs and upgrade core libs

--- a/resources/app-templates/leocdp-admin/modules/asset/item-product-import.html
+++ b/resources/app-templates/leocdp-admin/modules/asset/item-product-import.html
@@ -26,8 +26,11 @@
 	         		Header information for uploaded CSV file: <br>
 	         	</p>
 	         	<div class="datatable_text">
-	         		Category, Keywords, Store_ID, Product_ID_Type, Product_ID, Title, Description, Image_URL, Original_Price, Sale_Price, Currency, Full_URL <br>
+	         		Product_Type, Keywords, Store_ID, Product_ID_Type, Product_ID, Title or Name, Description, Image_URL, Original_Price, Sale_Price, Currency, Full_URL <br>
 	         	</div>
+	         	<p style="font-weight:bold;margin-top: 10px;font-size: 120%;"> 
+	         		For the CSV sample data, you can download at this <a target="blank" href="https://docs.google.com/spreadsheets/d/1RL34QbYxQn8KmgRjsEolmhOq8JhBVXgdHP5ytdmOxJE/view"> sample data here </a> 
+	         	</p>
 		 	 </div>
 		 </div>
          <div> 
