--- a/resources/app-templates/leocdp-admin/modules/customer/customer-profile-info.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/customer-profile-info.html
@@ -114,7 +114,7 @@
           	<a href="javascript:" data-target-tab="panel_profile_information" title="Data of profile" > <i class="fa fa-info-circle" aria-hidden="true"></i> Profile Details </a>
          </li>
          
-         <li >
+         <li style="display: none;">
          	<a href="javascript:" data-target-tab="panel_customer_experience" title="Customer Feedback Data" > <i class="fa fa-commenting-o" aria-hidden="true"></i> Customer Experience </a>
          </li>
          
