--- a/resources/app-templates/leocdp-admin/modules/journey/customer-journey-flow.html
+++ b/resources/app-templates/leocdp-admin/modules/journey/customer-journey-flow.html
@@ -80,7 +80,7 @@
        		<li>
        			<a href="javascript:" data-target-tab="panel_summary_report"  > <i class="fa fa-bar-chart aria-hidden="true"></i> Touchpoint Hub Report  </a>
        		</li>
-       		<li>
+       		<li style="display: none">
        			<a href="javascript:loadJourneyFlowReport()" data-target-tab="panel_journey_flow_report" > 
        				<i class="fa fa-snowflake-o" aria-hidden="true"></i> Event Flow Report 
        			</a>
@@ -122,7 +122,7 @@
 				</div>
 				
 				<!-- Event Observer Bar Chart -->
-            	<div class="col-lg-12">
+            	<div class="col-lg-12" style="display: none;">
 					<h4 class="highlight_text" > <i class="fa fa-info-circle" aria-hidden="true"></i> Top Event Sources </h4> 
 					<div id="journeyObserverChart" class="col-lg-12"> </div>
 				</div>	
