--- a/resources/app-templates/leocdp-admin/modules/customer/customer-profile-import.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/customer-profile-import.html
@@ -38,7 +38,7 @@
 		
 		
 		<div class="panel panel-business">
-          	<div class="panel-heading"> <i class="fa fa-list" aria-hidden="true"></i> Data Journey Map and Journey Stage </div>
+          	<div class="panel-heading"> <i class="fa fa-list" aria-hidden="true"></i> Data Journey Map and CX Journey Stage </div>
 		  	<div class="panel-body" >
 		  		<div class="col-lg-8" style="border-right:1px solid #000;" >
 		  			<p style="font-weight: bold;">  Data Journey Map  </p>
@@ -51,8 +51,8 @@
 	                </select>
 		  		</div>
 		  		<div class="col-lg-4"  >
-		  			<p style="font-weight: bold;">  Customer Journey Stage </p>
-			  		<select id="journeyStagesList" data-placeholder="Choose an Journey Stage" class="select" >
+		  			<p style="font-weight: bold;">  Customer Experience (CX) Journey Stage </p>
+			  		<select id="journeyStagesList" data-placeholder="Choose CX Journey Stage" class="select" >
 	                  <!-- journeyStagesList -->  
 	                </select>
 		  		</div>
@@ -64,7 +64,7 @@
           	<div class="panel-heading"> <i class="fa fa-info" aria-hidden="true"></i> Profile Type and Data Labels </div>
 		  	<div class="panel-body"  >
 		  		<div class="col-md-12" style="margin-bottom: 10px">			    	
-					<label for="importProfileOverwriteOldData"> <input id="importProfileOverwriteOldData" type="checkbox" > This CSV data is verified. The system must update existing profiles </label> 
+					<label for="importProfileOverwriteOldData"> <input id="importProfileOverwriteOldData" type="checkbox" > The data has been verified and should be treated as the Verified Profile </label> 
 				</div>
 		  		<div class="col-lg-12" style="margin-bottom: 15px">
 			  		<p style="font-weight: bold;">  Profile Type  </p>
@@ -81,7 +81,7 @@
 		            </select>
 	            </div>
 		  		<div class="col-lg-12">
-		  			<p style="font-weight: bold;">  The list of data labels is separated by a semicolon, to classify data by labels.</p>
+		  			<p style="font-weight: bold;">  Data labels are separated by semicolons for classification purposes </p>
 			    	<input type="text" class="form-control" id="profileImpoterDataLabel" aria-describedby="dataLabelHelp" placeholder="Enter data labels. E.g: student; business; contact lead for sales">
 			    </div>			     
 		  	</div>
