improve UI , use decodeURISafe

--- a/resources/app-templates/leocdp-admin/modules/customer/customer-profile-info.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/customer-profile-info.html
@@ -72,17 +72,29 @@
            <div class="col-lg-7">
 	        	 <ul class="list-group" style="margin-top:20px;">
 	        	 	<li class="list-group-item">
-	        	 		<div class="primary_field" >   
-	                    	<b> <i class="fa fa-clock-o" aria-hidden="true"></i> Updated by CDP at </b> 
-	                   		<span class="data_field" data-field="updatedAt" data-fieldholder="html"  data-fieldtype="date_time"  > -  </span> 
+	        	 		<div class="primary_field row" > 
+	        	 			<div class="col-sm-3"  >
+	        	 				<b> <i class="fa fa-clock-o" aria-hidden="true"></i> Created at </b> 
+	        	 			</div>
+	        	 			<div class="col-sm-9"  >
+	        	 				<span class="data_field" data-field="createdAt" data-fieldholder="html"  data-fieldtype="date_time"  > - </span> 
+	        	 			</div>
+	                    </div> 
+	        	 		<div class="primary_field row" >   
+	        	 			<div class="col-sm-3"  >
+	                    		<b> <i class="fa fa-clock-o" aria-hidden="true"></i> Updated by CDP at </b> 
+	                    	</div>
+	                    	<div class="col-sm-9"  >
+	                   			<span class="data_field" data-field="updatedAt" data-fieldholder="html"  data-fieldtype="date_time"  > -  </span> 
+	                    	</div>
 	                    </div>
-	                    <div class="primary_field" > 
-	                    	<b> <i class="fa fa-clock-o" aria-hidden="true"></i> Created at </b> 
-	                    	<span class="data_field" data-field="createdAt" data-fieldholder="html"  data-fieldtype="date_time"  > - </span> 
-	                    </div>  
-	                    <div class="primary_field" >   
-	                    	<b> <i class="fa fa-clock-o" aria-hidden="true"></i> Updated by CRM at </b> 
-	                   		<span class="data_field" data-field="updatedByCrmAt" data-fieldholder="html"  data-fieldtype="date_time"  > -  </span> 
+	                    <div class="primary_field row" >   
+	                    	<div class="col-sm-3"  >
+	                    		<b> <i class="fa fa-clock-o" aria-hidden="true"></i> Updated by CRM at </b> 
+	                    	</div>
+	                    	<div class="col-sm-9"  >
+	                   			<span class="data_field" data-field="updatedByCrmAt" data-fieldholder="html"  data-fieldtype="date_time"  > -  </span> 
+	                    	</div>
 	                    </div>
 	        	 	</li>
                    	<li class="list-group-item" >
