fix bugs: save profile from C sharp

--- a/resources/app-templates/leocdp-admin/modules/customer/customer-profile-list.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/customer-profile-list.html
@@ -116,11 +116,11 @@
 						    	<i class="fa fa-filter" aria-hidden="true"></i> Filter by using advanced criteria <span class="caret"></span>
 						   </button>
 						    <ul class="dropdown-menu">
-						      	<li><a href="javascript:" onclick="handleProfileListFiltersBy(this,'#filterProfileListByStatus')" >Profile Status</a></li>
-						      	<li><a id="btnFilterByDataLabel" href="javascript:" onclick="handleProfileListFiltersBy(this,'#filterByDataLabel')" >Profile Data Label</a></li>
-						      	<li><a href="javascript:" onclick="handleProfileListFiltersBy(this,'#filterByLastTouchpoint')" >Last Touchpoint Name</a></li>
+						      	<li><a id="btnFilterByDataLabel" href="javascript:" onclick="handleProfileListFiltersBy(this,'#filterByDataLabel')" >Data Labels</a></li>
+						      	<li><a href="javascript:" onclick="handleProfileListFiltersBy(this,'#filterByLastTouchpoint')" >Last-seen Touchpoint</a></li>
 						      	<li><a href="javascript:" onclick="handleProfileListFiltersBy(this,'#filterBySegmentName')" >Segment Name</a></li>
 						      	<li><a href="javascript:" onclick="handleProfileListFiltersBy(this,'#filterByMediaChannel')" >Media Channel</a></li>
+						      	<li><a href="javascript:" onclick="handleProfileListFiltersBy(this,'#filterProfileListByStatus')" >Profile Status</a></li>
 						      	<li><hr></li>
 						      	<li><a href="javascript:" onclick="handleProfileListFiltersBy(this,'#filterByProfileId')" >Profile ID</a></li>
 						    	<li><a href="javascript:" onclick="handleProfileListFiltersBy(this,'#filterEmail')" > Email Address</a></li>
