segment filter UI can be searched

--- a/resources/app-templates/leocdp-admin/index.html
+++ b/resources/app-templates/leocdp-admin/index.html
@@ -239,6 +239,10 @@
 	<!-- https://markjs.io : keyword highlighter  -->
 	<script src="https://gcore.jsdelivr.net/npm/mark.js@8.11.1/dist/jquery.mark.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	
+	<!--select2  -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js"  crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/css/select2.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
+	
 	<!-- videojs player -->
 	<script src="https://{{baseStaticUrl}}/mediaplayer/mediaplayer.one.min.js" async="true"></script>
 	
