improve for performance

--- a/resources/app-templates/leocdp-admin/modules/customer/segment-builder.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/segment-builder.html
@@ -241,7 +241,7 @@
 				
 				<!-- Query Details -->
 				<div class="col-lg-9">
-					<div id="segment-builder-holder"></div>
+					<div id="segment-builder-holder" data-realtime-query="true"  data-with-last-events="true" ></div>
 				</div>
 				<!-- Query Summary -->
 				<div class="col-lg-3 text-center">
