--- a/resources/app-templates/leocdp-admin/modules/customer/segment-details.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/segment-details.html
@@ -234,7 +234,7 @@
 					<div class="panel-body row">
 						<h4>You are looking for a group of people</h4>
 						<div class="col-lg-12">
-							<div id="segment-builder-holder" ></div>
+							<div id="segment-builder-holder" data-realtime-query="false"  data-with-last-events="false"  ></div>
 						</div>
 					</div>
 				</div>
