fix bugs can not load correct data

--- a/resources/app-templates/leocdp-admin/index.html
+++ b/resources/app-templates/leocdp-admin/index.html
@@ -319,7 +319,7 @@
 	<script src="//{{dnsDomainLeoAdmin}}/view/common-resources{{minifySuffix}}/leocdp.profile.js?admin=1&_={{cacheBustingKey}}" ></script>
 	
 	<!-- product-categories for segmentation -->
-	<script src="https://{{baseStaticUrl}}/data-segment-builder/product-categories.js?_={{cacheBustingKey}}"></script>
+	<script src="https://{{dnsDomainLeoAdmin}}/public/data-segment-builder/product-categories.js?_={{cacheBustingKey}}"></script>
 	
 	<!-- segmentation -->
 	<script src="//{{dnsDomainLeoAdmin}}/view/common-resources{{minifySuffix}}/leocdp.segment.builder.js?admin=1&_={{cacheBustingKey}}" async="true"></script>
