improve UI and new features

--- a/resources/app-templates/leocdp-admin/main-view.html
+++ b/resources/app-templates/leocdp-admin/main-view.html
@@ -111,12 +111,12 @@
 					<li id="Profile_Management_Menu" >
 						<a id="Profile_Management" href="#calljs-leoCdpRouter('Profile_Management')" 
 							title="All Customer Profiles" data-container="body" data-toggle="popover" data-placement="right" data-content="Manage all customer profiles: visitor, lead, prospect & engaged customers" > 
-							<i class="fa fa-fw fa-address-card-o"></i> Customer Profiles </a>
+							<i class="fa fa-fw fa-user-circle-o"></i> Customer Profiles </a>
 					</li>
 					<li id="Segment_Management_Menu" >
 						<a id="Segment_Management" href="#calljs-leoCdpRouter('Segment_Management')" 
 							title="All Customer Segments" data-container="body" data-toggle="popover" data-placement="right" data-content="Manage all customer segments: active visitors, leads, engaged customers,..."   > 
-							<i class="fa fa-object-group" aria-hidden="true"></i> Customer Segments </a>
+							<i class="fa fa-users" aria-hidden="true"></i> Customer Segments </a>
 					</li>
 				</ul>
 			</li>
