--- a/resources/app-templates/leocdp-admin/modules/customer/customer-profile-info.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/customer-profile-info.html
@@ -74,7 +74,7 @@
 	        	 	<li class="list-group-item">
 	        	 		<div class="primary_field row" > 
 	        	 			<div class="col-sm-4"  >
-	        	 				<b> <i class="fa fa-clock-o" aria-hidden="true"></i> Created at </b> 
+	        	 				<b> <i class="fa fa-clock-o" aria-hidden="true"></i> Profile is created at </b> 
 	        	 			</div>
 	        	 			<div class="col-sm-8"  >
 	        	 				<span class="data_field" data-field="createdAt" data-fieldholder="html"  data-fieldtype="date_time"  > - </span> 
@@ -82,7 +82,7 @@
 	                    </div> 
 	        	 		<div class="primary_field row" >   
 	        	 			<div class="col-sm-4"  >
-	                    		<b> <i class="fa fa-clock-o" aria-hidden="true"></i> Updated by CDP at </b> 
+	                    		<b> <i class="fa fa-clock-o" aria-hidden="true"></i> Updated by CDP </b> 
 	                    	</div>
 	                    	<div class="col-sm-8"  >
 	                   			<span class="data_field" data-field="updatedAt" data-fieldholder="html"  data-fieldtype="date_time"  > -  </span> 
@@ -90,7 +90,7 @@
 	                    </div>
 	                    <div class="primary_field row" >   
 	                    	<div class="col-sm-4"  >
-	                    		<b> <i class="fa fa-clock-o" aria-hidden="true"></i> Updated by CRM at </b> 
+	                    		<b> <i class="fa fa-clock-o" aria-hidden="true"></i> Updated by CRM </b> 
 	                    	</div>
 	                    	<div class="col-sm-8"  >
 	                   			<span class="data_field" data-field="updatedByCrmAt" data-fieldholder="html"  data-fieldtype="date_time"  > -  </span> 
@@ -98,11 +98,11 @@
 	                    </div>
 	        	 	</li>
                    	<li class="list-group-item" >
-				  		<i class="fa fa-tags" aria-hidden="true"></i> <b> In Data Journey Maps </b> <br>
+				  		<i class="fa fa-map-o" aria-hidden="true"></i> <b> In Data Journey Maps </b> <br>
 				  		<span id="profileInJourneyMaps" > </span> 
 				  	</li>
 				  	<li class="list-group-item">
-				  		<i class="fa fa-tags" aria-hidden="true"></i> <b> In Segments </b> <br>
+				  		<i class="fa fa-users" aria-hidden="true"></i> <b> In Segments </b> <br>
 				  		<span id="profileInSegments" > </span> 
 				  	</li>
 				  	<li class="list-group-item" style="display: none">
