improve system, fix bugs

--- a/resources/app-templates/leocdp-admin/modules/analytics/main-dashboard.html
+++ b/resources/app-templates/leocdp-admin/modules/analytics/main-dashboard.html
@@ -73,7 +73,7 @@
 		         			<i class="fa fa-filter" aria-hidden="true"></i> Profile Funnel 
 		         		</a>
 		         	</li>
-		         	<li  onclick="showDashboardReport(false)" >
+		         	<li  onclick="showDashboardReport(false)" style="display: none;" >
 		          		<a href="javascript:" data-target-tab="panel_profile_journey_funnel" title="Profile Journey Report"> 
 		          			<i class="fa fa-map-o" aria-hidden="true"></i> Profile Journey  
 		          		</a>
