--- a/resources/app-templates/leocdp-admin/modules/analytics/main-dashboard.html
+++ b/resources/app-templates/leocdp-admin/modules/analytics/main-dashboard.html
@@ -136,7 +136,8 @@
         
         <!-- holder for Total Customer Statistics and Total Event Statistics -->
         <div class="col-md-3"> 
-        	<div class="chart_box">
+        	<div id="profile_summary_stats_loader" class="loader"></div>
+        	<div id="profile_summary_stats" class="chart_box">
 	        		            
 	            <div class="panel panel-summary" >
             		<div class="panel-heading"> <h4 class="panel-title text-center"> <i class="fa fa-info-circle" aria-hidden="true"></i> Summary Report </h4> </div>
