--- a/resources/app-templates/leocdp-admin/modules/customer/segment-details.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/segment-details.html
@@ -143,7 +143,9 @@
 		     			<b class="segment_size highlight_text" >0</b>
 		     		</div>
 				</div>
-				<div class="panel panel-leoadmin" id="profile-list-panel"  >
+				
+				<div id="profile-list-panel_loader" class="loader"></div>
+				<div class="panel panel-leoadmin" id="profile-list-panel" style="display: none;" >
 					<div class="panel-heading">
 						<div class="row"> 
 							<div class="col-lg-12">
