improve UI and caching data

--- a/resources/app-templates/leocdp-admin/modules/customer/customer-profile-editor.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/customer-profile-editor.html
@@ -274,11 +274,11 @@
               					<input id="profile_visitorId" class="form-control" type="text" placeholder="Web Visitor Id" data-field="visitorId" data-fieldholder="inputvalue" data-fieldtype="string" autocomplete="off" disabled="disabled" >
 						</li>
 						<li>
-							<label for="profile_crmRefId"> <i class="fa fa-id-badge" aria-hidden="true"></i> Imported CRM ID </label> 
+							<label for="profile_crmRefId"> <i class="fa fa-id-badge" aria-hidden="true"></i> CRM Profile ID </label> 
               					<input id="profile_crmRefId" class="form-control" type="text" placeholder="CRM User ID" data-field="crmRefId" data-fieldholder="inputvalue" data-fieldtype="string" autocomplete="off" >
 						</li>
 	              	 	<li>
-		                   <label > <i class="fa fa-fw fa-list"></i> List of Citizen/Passport ID (Government Issued IDs) <span class="small_highlight_text">(Data for Identity Resolution)</span> </label> 
+		                   <label > <i class="fa fa-fw fa-list"></i> List of Citizen/Passport ID (Government-issued ID) <span class="small_highlight_text">(Data for Identity Resolution)</span> </label> 
 		                   <button type="button" class="btn btn-do-now btn-xs" onclick="profileAddNewTextHashSet('governmentIssuedIDs')"title="Add New Citizen/Passport ID"  > 
 		    					<i class="fa fa-plus-circle" aria-hidden="true"></i> Add Citizen/Passport ID 
 		    			   </button>
