--- a/resources/app-templates/leocdp-admin/modules/customer/customer-profile-info.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/customer-profile-info.html
@@ -829,19 +829,19 @@
 				                       <td>
 											<ol class="profile_ext_data" data-field="personal_attributes">
 	                							<li>
-								                   <b data-persona="key" > <i class="fa fa-id-badge"></i> Unified Profile ID </b> 
+								                   <b data-persona="key" > <i class="fa fa-id-badge"></i> CDP Profile ID </b> 
 								                   <p class="data_field" data-field="id" data-fieldholder="html" data-fieldtype="string" > - </p> 
+								               	</li>
+								               	<li>
+								                   <b data-persona="key" > <i class="fa fa-id-badge"></i> CRM Profile ID </b> 
+								                   <p class="data_field" data-field="crmRefId" data-fieldholder="html" data-fieldtype="string" > - </p> 
 								               	</li>
 								               	<li>
 								                   <b data-persona="key" > <i class="fa fa-id-badge"></i> Web Visitor ID </b> 
 								                   <p class="data_field" data-field="visitorId" data-fieldholder="html" data-fieldtype="string" > - </p> 
 								               	</li>
 								               	<li>
-								                   <b data-persona="key" > <i class="fa fa-id-badge"></i> Imported CRM ID </b> 
-								                   <p class="data_field" data-field="crmRefId" data-fieldholder="html" data-fieldtype="string" > - </p> 
-								               	</li>
-								               	<li>
-								                   <b data-persona="key" > <i class="fa fa-fw fa-id-card-o"></i> List of Citizen/Passport ID (Government Issued IDs) </b> 
+								                   <b data-persona="key" > <i class="fa fa-fw fa-id-card-o"></i> List of Citizen/Passport ID (Government-issued ID) </b> 
 								                   <p data-field="governmentIssuedIDs" data-fieldholder="html_hashset" data-fieldtype="hashset" > </p>
 								               	</li>
 								               	<li>
@@ -853,7 +853,7 @@
 								                   <p data-field="loyaltyIDs" data-fieldholder="html_hashset" data-fieldtype="hashset" > </p>
 								               	</li>
 								               	<li>
-				                                   <b data-persona="key"  >  <i class="fa fa-fw fa-users"></i> Social Media Profiles </b> 
+				                                   <b data-persona="key"  >  <i class="fa fa-fw fa-users"></i> List of Social Media ID </b> 
 				                                   <p data-field="socialMediaProfiles" data-fieldholder="html_hashmap"  data-fieldtype="hashmap" id="socialMediaProfiles" >  </p>
 				                                </li>
 							               	</ol>
