upgrade and improve system

--- a/resources/app-templates/leocdp-admin/modules/customer/segment-details.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/segment-details.html
@@ -113,7 +113,7 @@
 	       	<li>
 				<a href="javascript:" data-target-tab="panel_segment_data_exporting" title="Data Exporting" > <i class="fa fa-upload" aria-hidden="true"></i> Data Exporting </a>
 	       	</li>
-	       	<li>
+	       	<li style="display: none;" >
 				<a href="javascript:" data-target-tab="panel_segment_data_connection" title="Data Connection" > <i class="fa fa-exchange" aria-hidden="true"></i> Data Connection </a>
 	       	</li>
 	       	<li id="segment_data_enrichment" >
