--- a/resources/app-templates/leocdp-admin/main-view.html
+++ b/resources/app-templates/leocdp-admin/main-view.html
@@ -217,6 +217,9 @@
 	                $('#userDisplayName').text(dn).attr('title', tt);
 	                window.currentUserProfile = systemUser;
 	                
+	                // websocket
+	                registerUserToGetNotifications(systemUser);
+	                
 	                if(role === 6) {
 	                	// hasSuperAdminRole === true
 	                	$("#nav_system_management").show();
@@ -344,6 +347,10 @@
 			
 			// show main menu guide
 			initMainMenuGuide();
+			
+			
 		}
-	};
+	}
+	
+	
 </script>
