fix bugs query operator: before and after

--- a/resources/app-templates/leocdp-admin/index.html
+++ b/resources/app-templates/leocdp-admin/index.html
@@ -23,6 +23,7 @@
 		
 		var webTemplateCache = "{{webTemplateCache}}" === "true";
 		var hasB2Bfeatures = "{{hasB2Bfeatures}}" === "true";
+		var defaultPersonalizationService = "{{defaultPersonalizationService}}";
 		var systemDbReady = "{{systemDbReady}}" === "true";
 		var dataApiCache = "{{dataApiCache}}" === "true";
 		
