--- a/resources/app-templates/leocdp-admin/index.html
+++ b/resources/app-templates/leocdp-admin/index.html
@@ -7,6 +7,7 @@
 	<script>
 		var baseStaticDomain = '{{baseStaticUrl}}';
 		var dnsDomainLeoAdmin = '{{dnsDomainLeoAdmin}}';
+		var dnsDomainWebSocket = '{{dnsDomainWebSocket}}';
 		var baseUploadDomain = '{{baseUploaderUrl}}';
 		var baseUploadedFilesDomain = '{{baseUploadedFilesUrl}}';
 		var baseLeoObserverDomain = '{{baseLeoObserverUrl}}';
