--- a/resources/app-templates/leocdp-admin/modules/analytics/main-dashboard.html
+++ b/resources/app-templates/leocdp-admin/modules/analytics/main-dashboard.html
@@ -73,23 +73,23 @@
 		         			<i class="fa fa-filter" aria-hidden="true"></i> Profile Funnel 
 		         		</a>
 		         	</li>
-		         	<li  onclick="showDashboardReport(false)" style="display: none;" >
+		         	<li onclick="showDashboardReport(false)" style="display: none;" >
 		          		<a href="javascript:" data-target-tab="panel_profile_journey_funnel" title="Profile Journey Report"> 
 		          			<i class="fa fa-map-o" aria-hidden="true"></i> Profile Journey  
 		          		</a>
 		         	</li>
             		<li>
-		         		<a href="javascript:showTouchpointHubReport()" data-target-tab="panel_observer_report" title="Profile Sources by Observer" > 
+		         		<a href="javascript:" data-target-tab="panel_observer_report" title="Profile Sources by Observer" > 
 		         			<i class="fa fa-dot-circle-o" aria-hidden="true"></i> Touchpoint Hub
 		         		</a>
 		         	</li>	         		
 		         	<li>
-		         		<a href="javascript:showTouchpointItemReport()" data-target-tab="panel_touchpoint_report" title="Source Report Details at specific touchpoint" > 
+		         		<a href="javascript:" data-target-tab="panel_touchpoint_report" title="Source Report Details at specific touchpoint" > 
 		         			<i class="fa fa-dot-circle-o" aria-hidden="true"></i> Touchpoint Item
 		         		</a>
 		         	</li>		         			         		         	
 		         	<li style="display: none;" >
-		         		<a href="javascript:setJourneyFlowGraphView()" data-target-tab="panel_flow_network_report" title="Network Flow Report" > 
+		         		<a href="javascript:" data-target-tab="panel_flow_network_report" title="Network Flow Report" > 
 		         			<i class="fa fa-connectdevelop" aria-hidden="true"></i> Data Journey
 		         		</a>
 		         	</li>
