--- a/resources/app-templates/leocdp-admin/index.html
+++ b/resources/app-templates/leocdp-admin/index.html
@@ -3,7 +3,7 @@
 <head>
 	<base href="//{{dnsDomainLeoAdmin}}/">
 	
-	<!-- LeoCDP Admin Common Data, injected by WebData model -->
+	<!-- CDP Admin Common Data, injected by WebData model -->
 	<script>
 		var baseStaticDomain = '{{baseStaticUrl}}';
 		var dnsDomainLeoAdmin = '{{dnsDomainLeoAdmin}}';
@@ -24,7 +24,6 @@
 		
 		var webTemplateCache = "{{webTemplateCache}}" === "true";
 		var hasB2Bfeatures = "{{hasB2Bfeatures}}" === "true";
-		var defaultPersonalizationService = "{{defaultPersonalizationService}}";
 		var systemDbReady = "{{systemDbReady}}" === "true";
 		var dataApiCache = "{{dataApiCache}}" === "true";
 		
@@ -35,7 +34,9 @@
 		var leoCdpEdition = '{{leoCdpEdition}}';
 		var minifySuffix = '{{minifySuffix}}';
 		var maxTotalDataQualityScore = parseInt('{{maxTotalDataQualityScore}}');
-		var defaultRecommendedItemForProfile = 50;
+		
+		var defaultPersonalizationService = "{{defaultPersonalizationService}}";
+		var defaultRecommendedItemForProfile = parseInt('{{maxTotalRecommendedItems}}');
 	</script>
 	
 	<meta charset="UTF-8">
@@ -55,8 +56,11 @@
 	<link rel="icon" type="image/png" sizes="32x32" href="//{{dnsDomainLeoAdmin}}/public/images/leocdp-icon/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="//{{dnsDomainLeoAdmin}}/public/images/leocdp-icon/favicon-16x16.png">
 	<link rel="mask-icon" href="//{{dnsDomainLeoAdmin}}/public/images/leocdp-icon/safari-pinned-tab.svg" color="#5bbad5">
-	
+
 	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+	
+	<!-- lscache for HTML5 localStorage -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/lscache/1.3.2/lscache.min.js" crossorigin="anonymous" referrerpolicy="no-referrer" ></script>	
 	
 	<!-- Bootstrap Core CSS -->
 	<link href="https://{{baseStaticUrl}}/css/bootstrap.min.css?_={{cacheBustingKey}}" rel="stylesheet">
@@ -77,9 +81,6 @@
 	<!-- jQuery -->
 	<script src="https://{{baseStaticUrl}}/js/utils/jquery.js?_={{cacheBustingKey}}"></script>
 	<script src="https://{{baseStaticUrl}}/js/utils/jquery-ui.min.js?_={{cacheBustingKey}}"></script>
-	
-	<!-- lscache for HTML5 localStorage -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/lscache/1.3.2/lscache.min.js" crossorigin="anonymous" referrerpolicy="no-referrer" ></script>	
 	
 	<!-- Bootstrap Core JavaScript -->
 	<script src="https://{{baseStaticUrl}}/js/utils/bootstrap.min.js?_={{cacheBustingKey}}"></script>
@@ -263,16 +264,13 @@
 	<script src="//{{dnsDomainLeoAdmin}}/view/i18n/us.js?admin=1&_={{cacheBustingKey}}"></script>
 	
 	<style>
-	    body {
-	      font-family: 'Roboto', sans-serif !important;
-	    }
+	    body { font-family: 'Roboto', sans-serif !important; }
 	</style>
 </head>
 
 <body>
 	<div id="wrapper"></div>
 	<div id="common_modalbox_html"></div>
-	
 	<div class="modal fade" id="ajaxLoaderDialog" role="dialog">
 		<div class="modal-dialog">
 			<div class="modal-content">            
@@ -282,7 +280,7 @@
 			</div>
 		</div>
 	</div>
-
+	
 	<!-- ///////////////////////////////////////////////////////////////////////////////////////////// -->
 	
 	<!-- FilePond library -->
@@ -335,8 +333,7 @@
 	
 	<!-- campaign -->
 	<script src="//{{dnsDomainLeoAdmin}}/view/common-resources{{minifySuffix}}/leocdp.campaign.js?admin=1&_={{cacheBustingKey}}" async="true" ></script>
-	
-	
+
 	<!-- after deps are loaded -->
 	<script type="text/javascript" >
 		// video player
