fix save incomeHistory of profile

--- a/resources/app-templates/leocdp-admin/modules/customer/customer-profile-editor.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/customer-profile-editor.html
@@ -531,10 +531,10 @@
 		    	<div class="col-md-9" > <h5>Income Value</h5> </div>
 			</div>
 		    <div class="col-md-12" style="padding: 4px 8px; background-color: #f6f6f6; border-radius: 8px" >
-				<p id="profile_incomeHistory" data-field="incomeHistory" data-fieldholder="html_custom_field" data-fieldtype="custom_field" data-editable="true" > 
+				<p id="profile_incomeHistory" data-field="incomeHistory" data-fieldholder="html_custom_field" data-fieldtype="custom_field_number" data-editable="true" > 
 					-
 				</p>
-               </div>
+            </div>
               
 		</div>
 		
