--- a/resources/app-templates/leocdp-admin/index.html
+++ b/resources/app-templates/leocdp-admin/index.html
@@ -57,7 +57,10 @@
 	<link rel="icon" type="image/png" sizes="16x16" href="//{{dnsDomainLeoAdmin}}/public/images/leocdp-icon/favicon-16x16.png">
 	<link rel="mask-icon" href="//{{dnsDomainLeoAdmin}}/public/images/leocdp-icon/safari-pinned-tab.svg" color="#5bbad5">
 
-	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+	
 	
 	<!-- lscache for HTML5 localStorage -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/lscache/1.3.2/lscache.min.js" crossorigin="anonymous" referrerpolicy="no-referrer" ></script>	
@@ -264,7 +267,10 @@
 	<script src="//{{dnsDomainLeoAdmin}}/view/i18n/us.js?admin=1&_={{cacheBustingKey}}"></script>
 	
 	<style>
-	    body { font-family: 'Roboto', sans-serif !important; }
+	    body { 
+	    	font-family: "Noto Sans", sans-serif !important; 
+  			font-optical-sizing: auto;
+	    }
 	</style>
 </head>
 
